remove music, picture and calendar app, add contract and network app

--- a/src/main/resources/webserver/template/contract/user/headline.html
+++ b/src/main/resources/webserver/template/contract/user/headline.html
@@ -32,23 +32,23 @@
 <header>
     <div class="ui fixed inverted menu large" id="widescreen" {% if mobileView %}style="display: none;"{% endif %}>
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')" class="header item">
-            <img src="/static/img/icon/calendar.png" width="32" height="32" class="logo">
-            Kalender
+            <img src="/static/img/icon/contract.png" width="32" height="32" class="logo">
+            Vert&auml;ge
         </a>
         <div class="right menu">
-            <a href="/calendar/admin/index" class="item"><i class="setting icon large"></i></a>
+            <a href="/contract/admin/index" class="item"><i class="setting icon large"></i></a>
         </div>
     </div>
     <div class="ui fixed inverted menu large" id="smallscreen" {% if not mobileView %}style="display: none;"{% endif %}>
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')" class="header item">
-            <img src="/static/img/icon/calendar.png" width="32" height="32" class="logo">
-            Kalender
+            <img src="/static/img/icon/contract.png" width="32" height="32" class="logo">
+            Vertr&auml;ge
         </a>
         <div class="right menu">
             <div class="ui dropdown item">
                 <i class="bars icon"></i>
                 <div class="menu">
-                    <a href="/calendar/admin/index" class="item">
+                    <a href="/contract/admin/index" class="item">
                         <i class="setting icon large"></i>
                         Einstellungen
                     </a>
@@ -57,4 +57,4 @@
         </div>
     </div>
 </header>
-{% include '/webserver/template/sidebar.html' with {module: 'calendar'} %}
+{% include '/webserver/template/sidebar.html' with {module: 'contract'} %}
