--- a/src/main/resources/webserver/template/contract/user/index.html
+++ b/src/main/resources/webserver/template/contract/user/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kalender</title>
+    <title>Vertr&auml;ge</title>
     {% include '/webserver/template/header.html' %}
     <link rel="manifest" href="/static/manifest/calendarmanifest.json">
 </head>
 <body>
-{% include '/webserver/template/calendar/user/headline.html' %}
+{% include '/webserver/template/contract/user/headline.html' %}
 <main class="ui main container">
 
 </main>
