--- a/src/main/resources/webserver/template/global/user/index.html
+++ b/src/main/resources/webserver/template/global/user/index.html
@@ -84,22 +84,6 @@
                     <div class="header">Filme</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/music/index'">
-                <div class="image">
-                    <img src="/static/img/icon/music.png">
-                </div>
-                <div class="content">
-                    <div class="header">Musik</div>
-                </div>
-            </div>
-            <div class="card" onclick="window.location = '/picture/index'">
-                <div class="image">
-                    <img src="/static/img/icon/picture.png">
-                </div>
-                <div class="content">
-                    <div class="header">Bilder</div>
-                </div>
-            </div>
             <div class="card" onclick="window.location = '/recipe/index'">
                 <div class="image">
                     <img src="/static/img/icon/recipe.png">
@@ -116,20 +100,28 @@
                     <div class="header">Einkaufsliste</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/calendar/index'">
-                <div class="image">
-                    <img src="/static/img/icon/calendar.png">
-                </div>
-                <div class="content">
-                    <div class="header">Kalender</div>
-                </div>
-            </div>
             <div class="card" onclick="window.location = '/contact/index'">
                 <div class="image">
                     <img src="/static/img/icon/contact.png">
                 </div>
                 <div class="content">
                     <div class="header">Kontakte</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = '/contract/index'">
+                <div class="image">
+                    <img src="/static/img/icon/contract.png">
+                </div>
+                <div class="content">
+                    <div class="header">Vertr&auml;ge</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = '/network/index'">
+                <div class="image">
+                    <img src="/static/img/icon/network.png">
+                </div>
+                <div class="content">
+                    <div class="header">Netzwerk</div>
                 </div>
             </div>
         </div>
