--- a/src/main/resources/webserver/template/network/user/index.html
+++ b/src/main/resources/webserver/template/network/user/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bilder</title>
+    <title>Netzwerk</title>
     {% include '/webserver/template/header.html' %}
-    <link rel="manifest" href="/static/manifest/picturemanifest.json">
+    <link rel="manifest" href="/static/manifest/musicmanifest.json">
 </head>
 <body>
-{% include '/webserver/template/picture/user/headline.html' %}
+{% include '/webserver/template/network/user/headline.html' %}
 <main class="ui main container">
 
 </main>
