--- a/src/main/resources/webserver/template/sidebar.html
+++ b/src/main/resources/webserver/template/sidebar.html
@@ -12,14 +12,6 @@
             <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Filme
         </a>
-        <a href="/music/index" class="item {% if module == 'music' %}active{% endif %}">
-            <img src="/static/img/icon/music.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            Musik
-        </a>
-        <a href="/picture/index" class="item {% if module == 'picture' %}active{% endif %}">
-            <img src="/static/img/icon/picture.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            Bilder
-        </a>
         <a href="/recipe/index" class="item {% if module == 'recipe' %}active{% endif %}">
             <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Rezepte
@@ -28,13 +20,17 @@
             <img src="/static/img/icon/shoppinglist.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Einkaufsliste
         </a>
-        <a href="/calendar/index" class="item {% if module == 'calendar' %}active{% endif %}">
-            <img src="/static/img/icon/calendar.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            Kalender
-        </a>
         <a href="/contact/index" class="item {% if module == 'contact' %}active{% endif %}">
             <img src="/static/img/icon/contact.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Kontakte
+        </a>
+        <a href="/contract/index" class="item {% if module == 'contract' %}active{% endif %}">
+            <img src="/static/img/icon/contract.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Vertr&auml;ge
+        </a>
+        <a href="/network/index" class="item {% if module == 'network' %}active{% endif %}">
+            <img src="/static/img/icon/network.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Netzwerk
         </a>
     </div>
 </aside>
