add message api

--- a/src/main/resources/webserver/template/global/admin/headline.html
+++ b/src/main/resources/webserver/template/global/admin/headline.html
@@ -16,6 +16,10 @@
             <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             SmartHome Admin
         </a>
+        <a href="/admin/message" class="item {% if module == 'message' %}active{% endif %}">
+            <img src="/static/img/icon/message.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Meldungen
+        </a>
         <a href="/admin/backup" class="item {% if module == 'backup' %}active{% endif %}">
             <img src="/static/img/icon/backup.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Backup
