--- a/src/main/resources/webserver/template/global/admin/index.html
+++ b/src/main/resources/webserver/template/global/admin/index.html
@@ -24,6 +24,14 @@
     {% endif %}
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
+            <div class="card" onclick="window.location = '/admin/message'">
+                <div class="image">
+                    <img src="/static/img/icon/message.png">
+                </div>
+                <div class="content">
+                    <div class="header">Meldungen</div>
+                </div>
+            </div>
             <div class="card" onclick="window.location = '/admin/backup'">
                 <div class="image">
                     <img src="/static/img/icon/backup.png">
