--- a/src/main/resources/webserver/template/global/admin/message/message.html
+++ b/src/main/resources/webserver/template/global/admin/message/message.html
@@ -73,7 +73,7 @@
                             erforderlich (offen)
                         {% endif %}
                     {% else %}
-                    nicht erforderlich
+                    keine
                     {% endif %}
                 </td>
             </tr>
